# langchain_chat_models_prompt_chains_rag_agents_tools

./: pyproject.toml
1_chat-models/: 1_chat_models.basic.py
4_rag/: 1a_rag_basics.py  1b_rag_basics.py
4_rag/db/chroma_db/: chroma.sqlite3
4_rag/pdf/: bio.txt
